Colaboratory kullanılarak oluşturuldu

--- a/proje03.ipynb
+++ b/proje03.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled19.ipynb",
+      "name": "proje03.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO12Gx0zXmWk/dWnGb8oO2Z",
+      "authorship_tag": "ABX9TyOr536jSiJwk+l6YhrJkc8A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import time\n",
+        "def testçalıştır():\n",
+        "  print(\"Hoşgeldiniz. Testiniz hazırlanıyor, lütfen bekleyiniz.\")\n",
+        "  time.sleep(1)\n",
+        "  print(\"Kurallar: \\n1- Bu test 5 sorudan oluşmaktadır. \\n2- Test cevapları 'D' ya da 'Y'olarak girilmelidir. \\n3- Puanınız en son gösterilecektir.\\n4- Testi tekrar yapmak için 'e' ifadesini giriniz.\")\n",
+        "  sorular =[\"Türkiye'nin başkenti Ankara'dır.\",\"Avustralya, Avrupa kıtasındadır.\",\"En küçük asal sayı 2'dir.\",\"Isı termometre ile ölçülür.\",\"Eyfel kulesi Fransa'dadır.\"]\n",
+        "  cevaplar=[\"D\",\"Y\", \"D\",\"Y\",\"D\"]\n",
+        "  Soruno=0\n",
+        "  Cevapno=0\n",
+        "  puan=0\n",
+        "  for soru in sorular:\n",
+        "    Soruno+=1\n",
+        "    time.sleep(1)\n",
+        "    print(str(Soruno)+\".sorunuz: \"+soru)\n",
+        "    time.sleep(1)\n",
+        "    cevap=input(\"D/Y: \")\n",
+        "    if cevap == cevaplar[Cevapno]:\n",
+        "      print(\"Cevabınız doğru.\")\n",
+        "      puan+=1\n",
+        "    else:\n",
+        "      print(\"Cevabınız yanlış.\")\n",
+        "    Cevapno+=1\n",
+        "  time.sleep(1)\n",
+        "  toplampuan=int((puan/Soruno) *100)\n",
+        "  print(\"Toplam puanınız: \" +str(toplampuan))\n",
+        "  if toplampuan>=60:\n",
+        "    print(\"Tebrikler!Testi başarıyla tamamladınız.\") \n",
+        "  else:\n",
+        "    print(\"Üzgünüm. Testte başarısız oldunuz.\")\n",
+        "  tekrar=input(\"Testi tekrar yapmak ister misin?\") \n",
+        "  if tekrar ==\"e\":\n",
+        "    testçalıştır() \n",
+        "  else:\n",
+        "    print(\"Test sonlandı. İyi günler dileriz.\")\n",
+        "testçalıştır()"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "JhAvAf_xyigy",
-        "outputId": "bf4aee3a-c6dd-45a7-b0e9-35165c3c8a3a"
+        "id": "U0DbfpjmaSnB",
+        "outputId": "4e3c77cf-3057-4629-93a1-31c62795529a"
       },
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -45,90 +82,29 @@
             "Hoşgeldiniz. Testiniz hazırlanıyor, lütfen bekleyiniz.\n",
             "Kurallar: \n",
             "1- Bu test 5 sorudan oluşmaktadır. \n",
-            "2- Her bir soruyu yanıtlamanız için 10 saniye verilecektir. \n",
-            "3- Test cevapları 'Evet' ya da 'Hayır'olarak girilmelidir. \n",
-            "4- Puanınız en son gösterilecektir.\n",
-            "1.Sorunuz: \n",
-            "Türkiye'nin başkenti Ankara'dır.\n"
+            "2- Test cevapları 'D' ya da 'Y'olarak girilmelidir. \n",
+            "3- Puanınız en son gösterilecektir.\n",
+            "4- Testi tekrar yapmak için 'e' ifadesini giriniz.\n",
+            "1.sorunuz: Türkiye'nin başkenti Ankara'dır.\n",
+            "D/Y: D\n",
+            "Cevabınız doğru.\n",
+            "2.sorunuz: Avustralya, Avrupa kıtasındadır.\n",
+            "D/Y: Y\n",
+            "Cevabınız doğru.\n",
+            "3.sorunuz: En küçük asal sayı 2'dir.\n",
+            "D/Y: D\n",
+            "Cevabınız doğru.\n",
+            "4.sorunuz: Isı termometre ile ölçülür.\n",
+            "D/Y: Y\n",
+            "Cevabınız doğru.\n",
+            "5.sorunuz: Eyfel kulesi Fransa'dadır.\n",
+            "D/Y: D\n",
+            "Cevabınız doğru.\n",
+            "Toplam puanınız: 100\n",
+            "Tebrikler!Testi başarıyla tamamladınız.\n"
           ]
         }
-      ],
-      "source": [
-        "import time\n",
-        "print(\"Hoşgeldiniz. Testiniz hazırlanıyor, lütfen bekleyiniz.\")\n",
-        "sorular=[\"Türkiye'nin başkenti Ankara'dır.\",\"Avustralya, Avrupa kıtasındadır.\",\"En küçük asal sayı 2'dir.\",\"Isı termometre ile ölçülür.\",\"Eyfel kulesi Fransa'dadır.\"]\n",
-        "cevaplar=[\"Evet\",\"Hayır\",\" \"]\n",
-        "print(\"Kurallar: \\n1- Bu test 5 sorudan oluşmaktadır. \\n2- Her bir soruyu yanıtlamanız için 10 saniye verilecektir. \\n3- Test cevapları 'Evet' ya da 'Hayır'olarak girilmelidir. \\n4- Puanınız en son gösterilecektir.\") \n",
-        "puan=0\n",
-        "time.sleep(1)\n",
-        "print(\"1.Sorunuz: \")\n",
-        "time.sleep(1.5)\n",
-        "print(sorular[0])\n",
-        "cevap1= input(\"Cevabınız:\")\n",
-        "if cevap1==cevaplar[0]:\n",
-        "  print(\"Cevabınız doğru.\")\n",
-        "  puan+=20\n",
-        "else:\n",
-        "  print(\"Cevabınız yanlış.\")\n",
-        "\n",
-        "time.sleep(1.5)\n",
-        "print(\"2.Sorunuz: \")\n",
-        "time.sleep(1.5)\n",
-        "print(sorular[1])\n",
-        "cevap2= input(\"Cevabınız:\")\n",
-        "if cevap2==cevaplar[1]:\n",
-        "  print(\"Cevabınız doğru.\")\n",
-        "  puan+=20\n",
-        "else:\n",
-        "  print(\"Cevabınız yanlış.\")\n",
-        "\n",
-        "time.sleep(1.5)\n",
-        "print(\"3.Sorunuz: \")\n",
-        "print(sorular[2])\n",
-        "cevap3=input(\"Cevabınız:\")\n",
-        "if cevap3==cevaplar[0]:\n",
-        "  print(\"Cevabınız doğru.\")\n",
-        "  puan+=20\n",
-        "else:\n",
-        "  print(\"Cevabınız yanlış.\")\n",
-        "\n",
-        "time.sleep(1.5)\n",
-        "print(\"4.Sorunuz: \")\n",
-        "print(sorular[3])\n",
-        "cevap4=input(\"Cevabınız:\")\n",
-        "if cevap4==cevaplar[1]:\n",
-        "  print(\"Cevabınız doğru.\")\n",
-        "  puan+=20\n",
-        "else:\n",
-        "  print(\"Cevabınız yanlış.\")\n",
-        "\n",
-        "time.sleep(1.5)\n",
-        "print(\"5.Sorunuz: \")\n",
-        "print(sorular[4])\n",
-        "cevap5=input(\"Cevabınız:\")\n",
-        "if cevap5==cevaplar[0]:\n",
-        "  print(\"Cevabınız doğru.\")\n",
-        "  puan+=20\n",
-        "else:\n",
-        "  print(\"Cevabınız yanlış.\")\n",
-        "\n",
-        "if puan>=60:\n",
-        "  print(\"Tebrikler!Testi başarıyla tamamladınız. Puanınız: \"+ str(puan))\n",
-        "else:\n",
-        "  print(\"Üzgünüm. Testte başarısız oldunuz. Puanınız: \"+ str(puan))\n",
-        "  dönüs=input(\"Teste geri dönmek ister misiniz?\")"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "9zabs3NDJJjs"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
