--- a/Python_101.ipynb
+++ b/Python_101.ipynb
@@ -327,10 +327,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lmrymxeNjAR5",
-        "outputId": "cfec1b83-ae6a-4f46-e4fd-84327461d24b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cfec1b83-ae6a-4f46-e4fd-84327461d24b"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2502,13 +2502,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uQPbQgJAQ8nq"
+        "id": "uQPbQgJAQ8nq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "17c2e69e-6267-408c-a3e6-ae2f0a28321c"
       },
       "source": [
-        "#bilgiBilim\n"
+        "#bilgiBilim\n",
+        "bilgiBilim=['bilgi','bilgibilim',' information']\n",
+        "print(bilgiBilim)\n",
+        "bilgiBilim[:1]=[]\n",
+        "print(bilgiBilim)\n",
+        "bilgiBilim[:]=[]\n",
+        "print(bilgiBilim)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['bilgi', 'bilgibilim', ' information']\n",
+            "['bilgibilim', ' information']\n",
+            "[]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2546,7 +2566,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XHSZ06qzWxmB"
+        "id": "XHSZ06qzWxmB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "43c7428b-ee05-43a8-b891-3b334c325a6d"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2554,8 +2578,16 @@
         "ulkeKodlari = (\"TR\", \"US\", \"EN\", \"JP\")\n",
         "print(ulkeKodlari)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('TR', 'US', 'EN', 'JP')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2569,13 +2601,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p4i7BTX1Uv9S"
+        "id": "p4i7BTX1Uv9S",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1c6f2281-c19f-465a-f923-262f939e4fff"
       },
       "source": [
-        "#konuBasliklari\n"
+        "#konuBasliklari\n",
+        "konuBasliklari=('A','B','C','CB','CC','CT','D')\n",
+        "print(konuBasliklari)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('A', 'B', 'C', 'CB', 'CC', 'CT', 'D')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2612,10 +2658,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "T1DFoRVIXJtN",
-        "outputId": "169e5649-eab7-4b2a-9d6c-7da66a636605",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "169e5649-eab7-4b2a-9d6c-7da66a636605"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2655,10 +2701,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "t4-oPZTRXEuQ",
-        "outputId": "c7097784-adbc-44cb-f08f-27db250b874e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c7097784-adbc-44cb-f08f-27db250b874e"
       },
       "source": [
         "#sozluk\n",
@@ -2712,10 +2758,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "b07Mqre3XqoH",
-        "outputId": "30099b95-ed39-4e82-ee3e-4320e114589c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "30099b95-ed39-4e82-ee3e-4320e114589c"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2753,10 +2799,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "CcNcGoOaZfja",
-        "outputId": "8904ac6e-2e5e-416b-878c-ea3ee3709134",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8904ac6e-2e5e-416b-878c-ea3ee3709134"
       },
       "source": [
         "#yeniSozluk\n",
@@ -2812,10 +2858,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "rCDZFucUYbGC",
-        "outputId": "2c096b3e-0c67-42e5-89bb-e2d16499b944",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2c096b3e-0c67-42e5-89bb-e2d16499b944"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2851,10 +2897,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3Sl_XODcq1mL",
-        "outputId": "8a7e9a16-758b-448c-926d-223d06748751",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8a7e9a16-758b-448c-926d-223d06748751"
       },
       "source": [
         "#yeniListe\n",
@@ -2936,10 +2982,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "2e6sRcxoayBf",
-        "outputId": "076caf0e-5d99-4010-f4c9-8e3cd61cfb13",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "076caf0e-5d99-4010-f4c9-8e3cd61cfb13"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2982,10 +3028,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "XMHB4_dY3B1v",
-        "outputId": "4c8a9ce2-86b5-4810-91ff-882685561547",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4c8a9ce2-86b5-4810-91ff-882685561547"
       },
       "source": [
         "#Sistemde yer alan bilgiler:\n",
@@ -3049,10 +3095,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "EERabauFbSBB",
-        "outputId": "166ba10a-0dde-4c67-e00d-ec691ba9db42",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "166ba10a-0dde-4c67-e00d-ec691ba9db42"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3087,10 +3133,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-Knt3IBI_BRm",
-        "outputId": "0c5bc959-44af-4f3d-b08f-f285f141052b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0c5bc959-44af-4f3d-b08f-f285f141052b"
       },
       "source": [
         "acikSozluk = {\n",
@@ -3152,10 +3198,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hVT2r9_tbnis",
-        "outputId": "12f44dc4-f8fe-447f-bf5e-16282bc0aa25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "12f44dc4-f8fe-447f-bf5e-16282bc0aa25"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3200,10 +3246,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "vEFr1ub_thtK",
-        "outputId": "d40d0db3-9252-422d-dd7e-f376b89de2f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d40d0db3-9252-422d-dd7e-f376b89de2f9"
       },
       "source": [
         "yas = int(input(\"Yaşınızı giriniz: \"))\n",
@@ -3280,10 +3326,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZIm4g511cyvz",
-        "outputId": "96f05624-e931-4e40-b2e5-fbe04f80e917",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "96f05624-e931-4e40-b2e5-fbe04f80e917"
       },
       "source": [
         "# Örnek uygulmayı çalıştır\n",
@@ -3310,10 +3356,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Uikl2CnDc8rE",
-        "outputId": "2272ef55-ae35-4496-c2a4-19577b1434b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2272ef55-ae35-4496-c2a4-19577b1434b0"
       },
       "source": [
         "# Örnek uygulmayı çalıştır\n",
@@ -3349,10 +3395,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ry1L7GJ_J_wZ",
-        "outputId": "560fb5ad-2871-45b4-f859-7d0444450913",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "560fb5ad-2871-45b4-f859-7d0444450913"
       },
       "source": [
         "#liste\n",
@@ -3408,10 +3454,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "VLDA2SWAdUHz",
-        "outputId": "38d9ee66-0af7-4f7d-bc10-4b974198655c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "38d9ee66-0af7-4f7d-bc10-4b974198655c"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3487,10 +3533,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "83a-E21mMEUr",
-        "outputId": "3e51a208-5087-419e-87ec-da6a84af47de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3e51a208-5087-419e-87ec-da6a84af47de"
       },
       "source": [
         "#degisken\n",
@@ -3572,10 +3618,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "GTRNt3f4dxaZ",
-        "outputId": "a306c44c-cb29-4791-ecc7-075312f2db72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a306c44c-cb29-4791-ecc7-075312f2db72"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3643,10 +3689,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "xXDmHHe2TVLJ",
-        "outputId": "ba849288-890e-4d28-d5e2-c51cea342f19",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ba849288-890e-4d28-d5e2-c51cea342f19"
       },
       "source": [
         "# Örnek Uygulamayı çalıştır\n",
@@ -3705,10 +3751,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "8kRu3DpFT4pe",
-        "outputId": "916d65ba-29fb-416c-cb26-ba40524726a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "916d65ba-29fb-416c-cb26-ba40524726a6"
       },
       "source": [
         "# Örnek Uygulamayı çalıştır\n",
@@ -3747,11 +3793,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "aPxS3byjrjEN",
-        "outputId": "325b2830-92ce-471f-9fa5-76a90e7217ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 553
-        }
+          "height": 554
+        },
+        "outputId": "325b2830-92ce-471f-9fa5-76a90e7217ab"
       },
       "source": [
         "#Tahmin Oyunu\n",
@@ -3845,10 +3891,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "iwMnSTNMevh8",
-        "outputId": "8ad1620a-544f-47b1-ced1-f25e1b362bc5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8ad1620a-544f-47b1-ced1-f25e1b362bc5"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3905,10 +3951,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "i2IW-s8wfB3e",
-        "outputId": "c7f309a3-94e0-492f-a1dd-579112ac1be9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c7f309a3-94e0-492f-a1dd-579112ac1be9"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3942,10 +3988,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "BKerIDjcpfyE",
-        "outputId": "4249a1dc-6953-468a-f7b4-1c04f7ea1df0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4249a1dc-6953-468a-f7b4-1c04f7ea1df0"
       },
       "source": [
         "def karsila(kAd, kSoyad):\n",
@@ -3998,10 +4044,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "xRukn_KfrsA3",
-        "outputId": "7e691505-16a1-4f9b-d595-3c01e143c23f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7e691505-16a1-4f9b-d595-3c01e143c23f"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -4054,10 +4100,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Gy_5nrP6hHOR",
-        "outputId": "fb0a440f-4765-4a1e-b2ff-f7a9b27ca303",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fb0a440f-4765-4a1e-b2ff-f7a9b27ca303"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -4100,10 +4146,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "W4Z_Rgl_hq1t",
-        "outputId": "9230c0bc-be12-4cc3-a938-fd8eefa5461c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9230c0bc-be12-4cc3-a938-fd8eefa5461c"
       },
       "source": [
         "#Sayısal Loto örnek uygulama (fonksiyonsuz)\n",
@@ -4140,10 +4186,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "PRtF6Bd_b2Xg",
-        "outputId": "1251a605-3d0b-45fe-90c3-628313c3c364",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1251a605-3d0b-45fe-90c3-628313c3c364"
       },
       "source": [
         "#Sayısal Loto örnek uygulama (fonksiyonlu)\n",
@@ -4423,10 +4469,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "LpNM7SptoLK-",
-        "outputId": "9fd5779c-3c25-49e0-f311-d2ac0d3138ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9fd5779c-3c25-49e0-f311-d2ac0d3138ef"
       },
       "source": [
         "# Örnek uygulama 1'i gözlemleyelim\n",
@@ -4498,10 +4544,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "RPIbXyYvrTlk",
-        "outputId": "63be441c-9172-4f65-cc88-30b0cc151d33",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "63be441c-9172-4f65-cc88-30b0cc151d33"
       },
       "source": [
         "# Örnek uygulama 2'i gözlemleyelim\n",
@@ -4569,11 +4615,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "2gqeiPB9ys1l",
-        "outputId": "9256cd2b-1e22-43bf-97ef-4dd95bc8c674",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 355
-        }
+          "height": 356
+        },
+        "outputId": "9256cd2b-1e22-43bf-97ef-4dd95bc8c674"
       },
       "source": [
         "# Örnek uygulamada \"self\" tanımlaması yapılmadığı zaman döndürülen hata kodunu inceleyin\n",
@@ -4646,10 +4692,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "5zwuicQu0wm7",
-        "outputId": "29976fa4-c64f-48e2-e5ba-c8b0487264b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "29976fa4-c64f-48e2-e5ba-c8b0487264b0"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -4679,10 +4725,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "pLa87Qj04W1C",
-        "outputId": "fa67645d-124a-4d35-e168-c080f976f559",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fa67645d-124a-4d35-e168-c080f976f559"
       },
       "source": [
         "# Örnek uygulamayı > Duatlon\n",
@@ -4881,10 +4927,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "CKTfLO0PH3mF",
-        "outputId": "656b9b07-5383-4826-a504-02fac7e3beeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "656b9b07-5383-4826-a504-02fac7e3beeb"
       },
       "source": [
         "# Örnek uygulamayı çalıştır \n",
@@ -4941,11 +4987,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "HxSSqtqMIYpS",
-        "outputId": "761ba807-bebc-4c29-8bd1-c0210d44c286",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 379
-        }
+          "height": 380
+        },
+        "outputId": "761ba807-bebc-4c29-8bd1-c0210d44c286"
       },
       "source": [
         "# Google Drive'ın bir disk olarak görülmesi \n",
@@ -5031,11 +5077,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "3KXhzd_FKMWt",
-        "outputId": "c9956834-7c92-4260-c2fe-6b7920b1741f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 379
-        }
+          "height": 380
+        },
+        "outputId": "c9956834-7c92-4260-c2fe-6b7920b1741f"
       },
       "source": [
         "#Google Drive Bağlantısı\n",
