Colaboratory kullanılarak oluşturuldu

--- a/proje04.ipynb
+++ b/proje04.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "proje04.ipynb ",
+      "name": "proje04.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO85F9YBC8jEK0PhMjv6PBw",
+      "mount_file_id": "1EeVz9I0s5brsIMLjDpho8WjbI80L6e8x",
+      "authorship_tag": "ABX9TyOcpn0KBMtfUPmn+qefA5xQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,79 +25,73 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/esrasolhan/HU-bby162-2022-/blob/main/proje04.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/esrasolhan/hu-bby162-2022/blob/main/proje04.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "V0qu3917130h",
-        "outputId": "67f11962-73fc-413d-96e0-1d5df2fce001"
+        "id": "Gyxl8UKCEqZx",
+        "outputId": "c80d72fb-c24c-426e-95fc-52c5c1ec5301"
       },
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
-            "\n"
+            "\n",
+            "Kütüphane veritabanına hoşgeldiniz!\n",
+            "1-Kayıtları listeleme.\n",
+            "2-Yeni kayıt oluşturma.\n",
+            "3-Kayıtlar içinde arama yapma.\n",
+            "4-Çıkış \n",
+            "Lütfen yapmak istediğiniz işlemi seçiniz:4\n",
+            "\n",
+            "\n",
+            "Çıkış yapılıyor...\n"
           ]
         }
       ],
       "source": [
         "import time\n",
-        "eseradları=[\"Kayboluş\",\"Anna Karenina\",\"Simyacı\",\"Dönüşüm\",\"Hayvan Çiftliği\"]\n",
-        "yazaradları=[\"Georges Perec\",\"Lev Tolstoy\",\"Paulo Coelho\",\"Franz Kafka\",\"George Orwell\"]\n",
-        "yayınevleri=[\"Ayrıntı Yayınları\",\"Can Yayınları\",\"Can Yayınları\",\"İş Bankası Kültür Yayınları\",\"Can Yayınları\"]\n",
-        "yayınyılları=[\"2018\",\"2020\",\"2017\",\"2013\",\"2022\"]\n",
-        "sırano= eseradları.index\n",
+        "from google.colab import drive\n",
+        "\n",
+        "dosyayolu = \"/content/drive/MyDrive/Colab Notebooks/veritabani.txt\"\n",
+        "\n",
         "def kayıtlisteleme():\n",
-        "  time.sleep(1)\n",
         "  print(\"Kütüphanedeki tüm kayıtlar listeleniyor...\")\n",
-        "  for no in range(len(eseradları)):\n",
-        "    print(f\"\\nKaynak Adı: {eseradları[no]}\\nYazar Bilgisi: {yazaradları[no]} \\nYayınevi= {yayınevleri[no]} \\nYayınyılı= {yayınyılları[no]}\")\n",
+        "  dosyaaç= open(dosyayolu, \"r\")\n",
+        "  for kayıt in dosyaaç.readlines():\n",
         "    time.sleep(1)\n",
+        "    print(kayıt)\n",
+        "  dosyaaç.close()\n",
+        "\n",
         "def yenikayıt():\n",
-        "  time.sleep(1)\n",
         "  eseradı=input(\"Eser adı giriniz: \")\n",
         "  yazar=input(\"Yazar bilgisi giriniz: \")\n",
         "  yayınevi= input(\"Yayınevi bilgisini giriniz: \")\n",
         "  yayınyılı= input(\"Yayın yılı bilgisi giriniz: \")\n",
-        "  eseradları.append(eseradı)\n",
-        "  yazaradları.append(yazar)\n",
-        "  yayınevleri.append(yayınevi)\n",
-        "  yayınyılları.append(yayınyılı)\n",
-        "  print(\"Yeni kayıt listeye ekleniyor...\")\n",
-        "  time.sleep(0.3)\n",
-        "  print(\"Yeni kayıt listeye eklendi.\")\n",
+        "  f = open(dosyayolu, 'a' )\n",
+        "  f.write(eseradı + \" - \"+yazar  + \" - \" + yayınevi + \" - \"+ yayınyılı+\"\\n\" )\n",
+        "  f.close()\n",
+        "\n",
         "def arama():\n",
-        "  time.sleep(1)\n",
-        "  print(\"Kütüphane kayıtları içerisinde, kaynak adı veya yazar adı girerek arama yapabilirsiniz...\")\n",
-        "  aranacak= input(\"Aramanızı giriniz: \")\n",
-        "  print(\"\\n\")\n",
-        "  if aranacak in eseradları:\n",
-        "    arananno= eseradları.index(aranacak)\n",
-        "    print(\"Aradığınız kayıt bulundu: \")\n",
-        "    print(\"\\n\")\n",
-        "    time.sleep(1)\n",
-        "    print((f\"\\nKaynak Adı: {eseradları[arananno]}\\nYazar Bilgisi: {yazaradları[arananno]}\\nYayınevi= {yayınevleri[arananno]}\\nYayınyılı= {yayınyılları[arananno]}\"))\n",
-        "  elif aranacak in yazaradları:\n",
-        "    aranankişi=yazaradları.index(aranacak)\n",
-        "    print(\"Aradığınız kayıt bulundu: \")\n",
-        "    print(\"\\n\")\n",
-        "    time.sleep(1)\n",
-        "    print((f\"\\nKaynak Adı: {eseradları[aranankişi]}\\nYazar Bilgisi: {yazaradları[aranankişi]}\\nYayınevi= {yayınevleri[aranankişi]}\\nYayınyılı= {yayınyılları[aranankişi]}\"))\n",
-        "  else:\n",
-        "    time.sleep(1)\n",
-        "    print(\"Maalesef, aradığınız kaynak bulunmamaktadır.\")\n",
-        "    \n",
+        "  dosyayolu = \"/content/drive/MyDrive/Colab Notebooks/veritabani.txt\"\n",
+        "  aranan = input(\"Arama girdinizi yazınız: \")\n",
+        "  arama = open(dosyayolu, \"r\")\n",
+        "  for kitap in arama.readlines():\n",
+        "    if (aranan in kitap):\n",
+        "        print(kitap)\n",
+        "        time.sleep(0.7)\n",
+        "  else: \n",
+        "    print(\"Aradığınız kaynak bulunmamaktadır.\")\n",
+        "  arama.close() \n",
+        "\n",
         "def menü():\n",
         "  fonksiyonlar=[kayıtlisteleme,yenikayıt,arama]\n",
         "  while True:\n",
