Colaboratory kullanılarak oluşturuldu

--- a/proje04.ipynb
+++ b/proje04.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "name": "proje04.ipynb",
       "provenance": [],
-      "mount_file_id": "1EeVz9I0s5brsIMLjDpho8WjbI80L6e8x",
-      "authorship_tag": "ABX9TyOcpn0KBMtfUPmn+qefA5xQ",
+      "mount_file_id": "https://github.com/esrasolhan/hu-bby162-2022/blob/main/proje04.ipynb",
+      "authorship_tag": "ABX9TyNFuQIo0t+/xx8Yhav9gsPz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gyxl8UKCEqZx",
-        "outputId": "c80d72fb-c24c-426e-95fc-52c5c1ec5301"
+        "outputId": "5e49690a-d6b2-46e3-874b-60518c382089"
       },
       "outputs": [
         {
@@ -50,10 +50,85 @@
             "2-Yeni kayıt oluşturma.\n",
             "3-Kayıtlar içinde arama yapma.\n",
             "4-Çıkış \n",
-            "Lütfen yapmak istediğiniz işlemi seçiniz:4\n",
+            "Lütfen yapmak istediğiniz işlemi seçiniz:1\n",
             "\n",
             "\n",
-            "Çıkış yapılıyor...\n"
+            "Geçerli işlem girildi.Yönlendiriliyorsunuz...\n",
+            "\n",
+            "\n",
+            "Kütüphanedeki tüm kayıtlar listeleniyor...\n",
+            "Kayboluş - George Perec - Ayrıntı Yayınları - 2018\n",
+            "\n",
+            "Anne Karenina - Lev Tolstoy - Can Yayınları - 2020\n",
+            "\n",
+            "Simyacı - Paulo Coelho - Can Yayınları - 2017\n",
+            "\n",
+            "Dönüşüm - Franz Kafka -  İş Bankası Kültür Yayınları - 2013\n",
+            "\n",
+            "Hayvan Çiftliği - George Orwell - Can Yayınları - 2001\n",
+            "\n",
+            "\n",
+            "\n",
+            "Kütüphane veritabanına hoşgeldiniz!\n",
+            "1-Kayıtları listeleme.\n",
+            "2-Yeni kayıt oluşturma.\n",
+            "3-Kayıtlar içinde arama yapma.\n",
+            "4-Çıkış \n",
+            "Lütfen yapmak istediğiniz işlemi seçiniz:2\n",
+            "\n",
+            "\n",
+            "Geçerli işlem girildi.Yönlendiriliyorsunuz...\n",
+            "\n",
+            "\n",
+            "Eser adı giriniz: Böyle Buyurdu Zerdüşt \n",
+            "Yazar bilgisi giriniz: Friedrich Nietzsche\n",
+            "Yayınevi bilgisini giriniz: Panama Yayıncılık\n",
+            "Yayın yılı bilgisi giriniz: 2011\n",
+            "\n",
+            "\n",
+            "Kütüphane veritabanına hoşgeldiniz!\n",
+            "1-Kayıtları listeleme.\n",
+            "2-Yeni kayıt oluşturma.\n",
+            "3-Kayıtlar içinde arama yapma.\n",
+            "4-Çıkış \n",
+            "Lütfen yapmak istediğiniz işlemi seçiniz:1\n",
+            "\n",
+            "\n",
+            "Geçerli işlem girildi.Yönlendiriliyorsunuz...\n",
+            "\n",
+            "\n",
+            "Kütüphanedeki tüm kayıtlar listeleniyor...\n",
+            "Kayboluş - George Perec - Ayrıntı Yayınları - 2018\n",
+            "\n",
+            "Anne Karenina - Lev Tolstoy - Can Yayınları - 2020\n",
+            "\n",
+            "Simyacı - Paulo Coelho - Can Yayınları - 2017\n",
+            "\n",
+            "Dönüşüm - Franz Kafka -  İş Bankası Kültür Yayınları - 2013\n",
+            "\n",
+            "Hayvan Çiftliği - George Orwell - Can Yayınları - 2001\n",
+            "\n",
+            "Böyle Buyurdu Zerdüşt  - Friedrich Nietzsche - Panama Yayıncılık - 2011\n",
+            "\n",
+            "\n",
+            "\n",
+            "Kütüphane veritabanına hoşgeldiniz!\n",
+            "1-Kayıtları listeleme.\n",
+            "2-Yeni kayıt oluşturma.\n",
+            "3-Kayıtlar içinde arama yapma.\n",
+            "4-Çıkış \n",
+            "Lütfen yapmak istediğiniz işlemi seçiniz:3\n",
+            "\n",
+            "\n",
+            "Geçerli işlem girildi.Yönlendiriliyorsunuz...\n",
+            "\n",
+            "\n",
+            "Arama girdinizi yazınız: Simyacı\n",
+            "Simyacı - Paulo Coelho - Can Yayınları - 2017\n",
+            "\n",
+            "Aradığınız kaynak bulunmamaktadır.\n",
+            "\n",
+            "\n"
           ]
         }
       ],
